//----------------------------------------------------------------------------
// Copyright 2021, Ed Keenan, all rights reserved.
//----------------------------------------------------------------------------

#ifndef CREATE_TEXTURE_H
#define CREATE_TEXTURE_H


void CreateTexture(const char* const pName);
void CreateTexturePNG(const char* const pName, const char* const pOutFileName = nullptr);

#endif

// --- End of File ---
